--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
         "type": "module"
     },
     "devDependencies": {
+        "@tailwindcss/postcss": "^4.1.15",
         "@tailwindcss/vite": "^4.1.15",
         "autoprefixer": "^10.4.21",
         "axios": "^1.1.2",
